fleet/laravel-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
  labels:
    app: laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      volumes:
        - name: app-code
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: laravel-nginx
        - name: nginx-main-config
          configMap:
            name: laravel-nginx-main
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: app-code
              mountPath: /var/www/html
              readOnly: true
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
            - name: nginx-main-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
        - name: php-fpm
          image: ghcr.io/alexuresp/laravel-app:c77efbf
          ports:
            - name: php-fpm
              containerPort: 9000
          volumeMounts:
            - name: app-code
              mountPath: /var/www/html
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: php-fpm
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: php-fpm
            initialDelaySeconds: 10
            periodSeconds: 10
