fleet/laravel-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel
  labels:
    app: laravel
spec:
  selector:
    app: laravel
  ports:
    - name: http
      port: 80
      targetPort: http
