fleet/laravel-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel
  labels:
    app: laravel
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-real-ip@kubernetescrd
spec:
  rules:
    - host: laravel.192-168-1-103.traefik.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel
                port:
                  number: 80
